<?xml version="1.0" encoding="utf-8"?>
<com.primeyz.padcassignment1.utils.CustomNestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_medium"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingStart="@dimen/padding_large"
            android:paddingTop="@dimen/padding_large"
            android:text="Start Here"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/tv_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingStart="@dimen/padding_large"
            android:paddingTop="@dimen/padding_ex_large"
            android:text="@string/title_my_playlist"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_my_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/tv_healthy_mind_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingStart="@dimen/padding_large"
            android:paddingTop="@dimen/padding_ex_large"
            android:text="@string/title_a_healthy_mind"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_healthy_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/tv_new_habits_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingStart="@dimen/padding_large"
            android:paddingTop="@dimen/padding_ex_large"
            android:text="@string/title_new_on_simple_habit"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_new_on_simple_habit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/tv_most_popular_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingStart="@dimen/padding_large"
            android:paddingTop="@dimen/padding_ex_large"
            android:text="@string/title_most_popular"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_most_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/tv_all_topic_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingStart="@dimen/padding_large"
            android:paddingTop="@dimen/padding_ex_large"
            android:text="@string/title_all_topic"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_all_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            tools:listitem="@layout/item_topic" />
    </LinearLayout>


</com.primeyz.padcassignment1.utils.CustomNestedScrollView>